--- a/src/index.css
+++ b/src/index.css
@@ -24,16 +24,17 @@ body {
 
 .textarea {
   box-sizing: border-box;
-  border: none;
+  border: 1;
   border-radius: 3px;
   resize: none;
   font-size: 20px;
   line-height: 20px;
-  height: 100%;
+  height: 100vh;
   overflow: auto;
   width: 100%;
   padding-top: 50px;
   padding-left: 70px;
+  padding-right: 70px;
   font-family: Helvetica, sans-serif, serif;
   background-color: aliceblue;
   color: black;
@@ -61,11 +62,12 @@ textarea:focus {
       resize: none;
       font-size: 18pt;
       line-height: 14px;
-      height: 100%;
+      height: 100vh;
       overflow: auto;
       width: 100%;
       padding-top: 40px;
       padding-left: 30px;
+      padding-right: 30px;
       font-family: Helvetica, sans-serif, serif;
       background-color: aliceblue;
       /*background-color: #343D46;*/
